--- a/app/views/mentoring/reply_success.html.erb
+++ b/app/views/mentoring/reply_success.html.erb
@@ -60,30 +60,15 @@
 </header>
 
 <section>
-	<div class="wrapper_section2 margin_plus2">
-		<h2 class="text_center"> 멘토링 요청 리스트 </h2>
-		<%@find_my_apply.each do |p|%>
-			<%if p.mentor_id==@user.id && p.complete==0 %>
-			<!-- 접속 아이디가 멘토 아이디이고 해당 indexofapply의 complete==0인것	 -->
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<input type="hidden" value ="<%=p.user_id %>" name="mentee_id">
-							<%@all_user.each do |u|%>
-								<%if u.id==p.user_id%>
-									<li>
-										<a href="/mentor_viewdetail?list_id=<%=p.list_id%>">  
-											<%=u.username%> 님의 멘토링 요청 확인하기 </a>
-									</li>
-								<%end%>
-							<%end%>
-					</div>
+	<div class="contaioner">
+		<div class="wrapper_section2 margin_plus2">
+			<h2 class="text_center"> 완료 </h2>
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<h3>수락되었습니다. <%=@print%></h3>					
 				</div>
-			<%end%>
-		<%end%>	
-		
-		
-		
-		
+			</div>
+	
+		</div>
 	</div>
-
 </section>
