--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,13 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 				
-						<script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+  <!-- This stylesheet contains specific styles for displaying the map
+       on this page. Replace it with your own styles as described in the
+       documentation:
+       https://developers.google.com/maps/documentation/javascript/tutorial -->
+  <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
+
 
 </head>
 <body>
