--- a/app/views/mentoring/mentoring_apply_form_2.erb
+++ b/app/views/mentoring/mentoring_apply_form_2.erb
@@ -2,35 +2,9 @@
 <!-- logo 만 남기고 시프다 -->
 
 <header>
-	<div class="img_header">
+	<div class="img_header5">
 		<div class="wrapper_header">
 			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="mobile_menu">
-				<%= image_tag("logo2.png", id:'mobile_nav_logo') %>
-				<%= image_tag("x.png", id:'x_logo') %>
-				<div>
-					<ul>
-						<li>
-							<a href="/mypage">안녕하세요! <%= @user.username %>님</a>
-						</li>
-						<li>
-							<a href="/service">서비스</a>
-						</li>
-						<li>
-							<a href="/doum">도움말</a>
-						</li>
-						<li>
-							<a href="enroll_mentor">멘토 등록하기</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="mobile_header">
-				<%= image_tag("mobile_menu.png" , id: 'mobile_menu_logo') %>
-				<a class="mobile_brand" href="#page-top"> <%= image_tag("logo.png", id:'mobile_logo') %> </a>
-			</div>
-
 			<div class="basic_header">
 				<div class="logo">
 					<a href="/"> <%= image_tag("logo.png" , id:'logo')  %> </a>
@@ -69,6 +43,8 @@
 					</nav>
 				</div>
 			</div>
+    </div>
+  </div>
 </header>
 
 <section>
