--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,54 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import 'home';
- 
+
+
+#map {
+  width : 700px;
+}
+
+.controls {
+  margin-top: 10px;
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 300px;
+}
+
+#pac-input:focus {
+  border-color: #4d90fe;
+}
+
+.pac-container {
+  font-family: Roboto;
+}
+
+#type-selector {
+  color: #fff;
+  background-color: #4d90fe;
+  padding: 5px 11px 0px 11px;
+}
+
+#type-selector label {
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 300;
+}
+
 
  /* CSS Reset */
 
@@ -1429,6 +1476,26 @@
   font-size : 13px;
  }
  }
+
+// mentoring _ process
+
+.mentoring_area {
+  margin-top : 30px;
+}
+
+.area_block {
+  width : 100px;
+  height : 50px;
+  border-radius : 10px;
+  background-color : #27a8e0;
+  color : white;
+  text-align : center;
+  line-height : 50px;
+  font-size : 15px;
+  display : inline-block;
+  margin-top : 20px;
+  margin-right : 15px;
+}
  
  //  @media only screen and (min-device-width : 320px) and (max-device-width : 667px) { 
  //    .img_header {
