--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,26 +5,19 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
   
-  
-  
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <%= favicon_link_tag 'shortcut.png' %>
   <title>Delpoy - 당신의 완벽한 여행을 위해</title>
-
-  
-    
-
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 				
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <!-- This stylesheet contains specific styles for displaying the map
-       on this page. Replace it with your own styles as described in the
-       documentation:
-       https://developers.google.com/maps/documentation/javascript/tutorial -->
-  <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
-
+     on this page. Replace it with your own styles as described in the
+     documentation:
+     https://developers.google.com/maps/documentation/javascript/tutorial -->
+  <link rel="stylesheet" href="https://developers.google.com/maps/documentation/javascript/demos/demos.css">
 
 </head>
 <body>
@@ -43,6 +36,5 @@
       </div>
     </div>
   </footer>
-  
 </body>
 </html>
