--- a/app/views/mentoring/mentoring_apply_form_2.erb
+++ b/app/views/mentoring/mentoring_apply_form_2.erb
@@ -50,27 +50,22 @@
 <section>
 	<div class="wrapper_section2 margin_plus2">
 		<h2 class="text_center"> 1-1. 여행 기본 정보 작성하기 </h2>
-
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<form action="/mentoring_process2" method="post">
 					<input type="hidden" value ="<%= @user.id %>" name="id_of_user">
 					<!--지역-->
 					<div class="form-group">
-						<label for="mentor_area"> 가고 싶은 지역 (지도 API 넣기 ) </label>
-						<input type="text" class="form-control enroll_input" name="mentor_area" id="mentor_area" placeholder="나라 혹은 도시">
+						<label for="mentor_area"> 가고 싶은 지역</label>
+            <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+            <div id="map"></div>
+            <div id="mentoring_area_block"></div>
+						<input type="text" class="form-control enroll_input mentoring_area" name="mentor_area" id="mentor_area" placeholder="나라 혹은 도시">
 					</div>
 
 					<!-- 날짜 -->
 					<div class="form-group">
 
-						<script>
-							$(function() {
-								$("#datepicker1, #datepicker2").datepicker({
-									dateFormat : 'yy-mm-dd'
-								});
-							});
-						</script>
 
 						<p>
 							<label for="mentor_period">여행 일정 </label>
@@ -106,12 +101,114 @@
 					
 					<br>
 
-					<button type="submit" class="btn btn-default enroll_mentor_button ">
+					<button type="submit" class="btn btn-default enroll_mentoring_button ">
 						견적서 제출하기 
 					</button>
 				</form>
 			</div>
 		</div>
-
 	</div>
 </section>
+
+
+<script>
+
+  function initAutocomplete() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: 30.8688, lng: 181.2195},
+      zoom: 2,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    // Create the search box and link it to the UI element.
+    var input = document.getElementById('pac-input');
+    var searchBox = new google.maps.places.SearchBox(input);
+    map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+    // Bias the SearchBox results towards current map's viewport.
+    map.addListener('bounds_changed', function() {
+      searchBox.setBounds(map.getBounds());
+    });
+
+    var markers = '';
+    // [START region_getplaces]
+    // Listen for the event fired when the user selects a prediction and retrieve
+    // more details for that place.
+    searchBox.addListener('places_changed', function() {
+      var places = searchBox.getPlaces();
+
+      if (places.length == 0) {
+        return;
+      }
+
+      // Clear out the old markers.
+//      markers.forEach(function(marker) {
+//        marker.setMap(null);
+//      });
+//      markers = [];
+
+      // For each place, get the icon, name and location.
+      var bounds = new google.maps.LatLngBounds();
+      places.forEach(function(place) {
+        var icon = {
+          url: place.icon,
+          size: new google.maps.Size(71, 71),
+          origin: new google.maps.Point(0, 0),
+          anchor: new google.maps.Point(17, 34),
+          scaledSize: new google.maps.Size(35, 35)
+        };
+
+        // Create a marker for each place.
+//        markers.push(new google.maps.Marker({
+//          map: map,
+//          icon: icon,
+//          title: place.name,
+//          position: place.geometry.location,
+//        }));
+
+        var marker = new google.maps.Marker({
+          map: map,
+          icon: icon,
+          title: place.name,
+          position: place.geometry.location,
+        });
+
+        if (place.geometry.viewport) {
+          // Only geocodes have viewport.
+          bounds.union(place.geometry.viewport);
+        } else {
+          bounds.extend(place.geometry.location);
+        }
+
+        marker.addListener('click',function(){
+          if (markers == '') {
+            markers = place.name;
+          } else {
+            markers = markers + ' ' + place.name;
+          }
+          $('.mentoring_area').val(markers);
+          $('#mentoring_area_block').append("<div class='area_block'>" + place.name + "</div>")
+//          $('#mentoring_area_block').append($('#mentoring_area_block').find('.area_block').get().reverse());
+          map.setZoom(2);
+          map.setCenter(map.center);
+          $('#pac-input').val('');
+        });
+      });
+      map.fitBounds(bounds);
+    });
+    // [END region_getplaces]
+  }
+
+
+  // datepicker
+  $(function() {
+    $("#datepicker1, #datepicker2").datepicker({
+      dateFormat : 'yy-mm-dd'
+    });
+  });
+
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA72zF0QFMu6C2d3aim0lUlMJLsmbQEwIo&libraries=places&callback=initAutocomplete"
+        async defer></script>
+
+
