mentor_view page complete

--- a/app/views/mentoring/mentor_viewdetail.html.erb
+++ b/app/views/mentoring/mentor_viewdetail.html.erb
@@ -85,32 +85,32 @@
 
 						<p>
 							<label for="mentor_period">여행 일정 </label>
-							<%=@details.from%> ~ <%=@details.to%>
+							<br><%=@details.from%> ~ <%=@details.to%>
 						</p>
 					</div>
 					<!-- 여행 인원 -->
 					<div class="form-group">
 						<label for="mentor_area"> 여행 인원 (선택 ) </label>
-						&nbsp; <%=@details.numOfMem%> 명
+						<sbr><%=@details.numOfMem%> 명
 					</div>
 					<!--여행 테마 -->
 					<div class="form-group">
 						<label for="mentor_area"> 여행 테마 ( 사진 + text + checkbox? ) </label>
-						<%=@details.themeOfPlan%>
+						<br><%=@details.themeOfPlan%>
 					</div>
 
 					<div class="form-group">
 						<label for="mentor_content"> 예산 범위 </label>
-						<%=@details.budget%>
+						<br><%=@details.budget%>
 					</div>
 					<div class="form-group">
 						<label for="mentor_area"> 숙박 유형 (사진 + 호텔, 호스텔 , 민박, 펜션 ,기타 , 섞어서 등등 ) </label>
-						<%=@details.accomodation%>
+						<br><%=@details.accomodation%>
 					</div>
 					
 					<div class="form-group">
 						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
-						<%=@details.mentor_content%>
+						<br><%=@details.mentor_content%>
 					</div>
 					
 						
