--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1484,6 +1484,30 @@
   display : none;
 }
 
+.mentoring_theme, .mentoring_accom {
+  display : inline-block;
+  width : 90px;
+  height : 50px;
+  border-radius: 10px;
+  background-color: #27a8e0;
+  line-height : 50px;
+  color : white;
+  text-align: center;
+  cursor : pointer;
+  margin-left : 5px;
+  margin-right : 5px;
+  margin-bottom : 15px;
+}
+
+.mentoring_radio_theme, .mentoring_radio_accom {
+  display : none;
+}
+
+.mentor_theme_group {
+  text-align : center;
+  margin-top : 20px;
+}
+
 .area_block {
   width : 100px;
   height : 50px;
@@ -1492,10 +1516,22 @@
   color : white;
   text-align : center;
   line-height : 50px;
-  font-size : 15px;
+  font-size : 17px;
   display : inline-block;
   margin-top : 20px;
   margin-right : 15px;
+
+}
+
+label[for="mentor_period"], label[for="mentor_theme"], label[for="mentor_number"],label[for="mentor_accom"], label[for="mentor_budget"], label[for="mentor_plus"]{
+  display : block;
+  margin : 20px 0 15px 0;
+  font-size : 18px;
+}
+
+label[for="mentor_area"] {
+  margin : 10px 0 15px 0;
+  font-size : 18px;
 }
  
  //  @media only screen and (min-device-width : 320px) and (max-device-width : 667px) { 
