--- a/app/views/mentoring/mentoring_apply_form_2.erb
+++ b/app/views/mentoring/mentoring_apply_form_2.erb
@@ -56,7 +56,7 @@
 					<input type="hidden" value ="<%= @user.id %>" name="id_of_user">
 					<!--지역-->
 					<div class="form-group">
-						<label for="mentor_area"> 가고 싶은 지역</label>
+						<label for="mentor_area"> 1. 가고 싶은 지역 (검색창에서 검색 후 마커를 눌러주세요.)</label>
             <input id="pac-input" class="controls" type="text" placeholder="Search Box">
             <div id="map"></div>
             <div id="mentoring_area_block"></div>
@@ -76,26 +76,39 @@
 					</div>
 					<!-- 여행 인원 -->
 					<div class="form-group">
-						<label for="mentor_area"> 여행 인원 (선택 ) </label>
+						<label for="mentor_number"> 여행 인원 (선택 ) </label>
 						<input type="text" class="form-control enroll_input" id="" name ="numOfMem">
 					</div>
 					<!--여행 테마 -->
 					<div class="form-group">
-						<label for="mentor_area"> 여행 테마 ( 사진 + text + checkbox? ) </label>
-						<input type="text" class="form-control enroll_input" id="" name="themeOfPlan">
+            <label for="mentor_theme"> 여행 유형</label>
+            <div class="mentor_theme_group">
+              <div class="mentoring_theme"><input type="radio" name="theme" class="mentoring_radio_theme" value="family">가족</div>
+              <div class="mentoring_theme"><input type="radio" name="theme" class="mentoring_radio_theme" value="friend">우정</div>
+              <div class="mentoring_theme"><input type="radio" name="theme" class="mentoring_radio_theme" value="couple">커플</div>
+              <div class="mentoring_theme"><input type="radio" name="theme" class="mentoring_radio_theme" value="family">솔로</div>
+              <div class="mentoring_theme"><input type="radio" name="theme" class="mentoring_radio_theme" value="friend">허니문</div>
+              <div class="mentoring_theme"><input type="radio" name="theme" class="mentoring_radio_theme" value="couple">비즈니스</div>
+            </div>
 					</div>
 
 					<div class="form-group">
-						<label for="mentor_content"> 예산 범위 </label>
+						<label for="mentor_budget"> 예산 범위 </label>
 						<textarea class="form-control" name = "budget"  rows="10"></textarea>
 					</div>
 					<div class="form-group">
-						<label for="mentor_area"> 숙박 유형 (사진 + 호텔, 호스텔 , 민박, 펜션 ,기타 , 섞어서 등등 ) </label>
-						<input type="text" class="form-control enroll_input" name="accomodation" placeholder="나라 혹은 도시">
-					</div>
+						<label for="mentor_accom"> 숙박 유형</label>
+            <div class="mentoring_accom"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="hotel">호텔</div>
+            <div class="mentoring_accom"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="hostel">호스텔</div>
+            <div class="mentoring_accom" style="font-size : 15px;"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="guesthouse">게스트하우스</div>
+            <div class="mentoring_accom"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="minbak">민박</div>
+            <div class="mentoring_accom"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="pension">펜션</div>
+            <div class="mentoring_accom"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="couchsurfing">카우치서핑</div>
+            <div class="mentoring_accom"><input type="radio" name="accomodation" class="mentoring_radio_accom" value="camping">캠핑</div>
+          </div>
 					
 					<div class="form-group">
-						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
+						<label for="mentor_plus">멘토에게 하고 싶은 말 (추가 요청 사항) </label>
 						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
 					</div>
 					
@@ -213,6 +226,20 @@
         return false;
     });
   });
+
+  $('.mentoring_theme').click(function(){
+    $('.mentoring_theme').css('background-color','#27a8e0');
+    $('.mentoring_radio_theme').prop('checked',false);
+    $(this).css('background-color', '#0e6bc4');
+    $(this).children().prop('checked',true);
+  })
+
+  $('.mentoring_accom').click(function(){
+    $('.mentoring_accom').css('background-color','#27a8e0');
+    $('.mentoring_radio_accom').prop('checked',false);
+    $(this).css('background-color', '#0e6bc4');
+    $(this).children().prop('checked',true);
+  })
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA72zF0QFMu6C2d3aim0lUlMJLsmbQEwIo&libraries=places&callback=initAutocomplete"
