--- a/app/views/mentoring/reply_admit.html.erb
+++ b/app/views/mentoring/reply_admit.html.erb
@@ -71,6 +71,7 @@
 						<br>
 				        <div class="form-inline"><input type="number" name="cost" class="form-control" placeholder="비용 ($)">
 				        <input type="hidden" value ="<%= @list_id %>" name="list_id">
+				        <input type="hidden" value ="<%= @index_id %>" name="index_id">
 				        <input type="hidden" value ="0" name="result">
 				        <button type="submit" class="btn btn-primary"> 제안하기 </button>
 				        </div>
