--- a/app/views/mentoring/mentor_view.html.erb
+++ b/app/views/mentoring/mentor_view.html.erb
@@ -39,6 +39,7 @@
                                     <ul>
                                         <li class="my_page"><a href="/mypage">마이페이지</a></li>
                                         <li class="log_out"><a href="/users/sign_out">로그아웃</a></li>
+                                        
                                     </ul>
                                 </div>
                             </div>
@@ -63,15 +64,15 @@
 	<div class="wrapper_section2 margin_plus2">
 		<h2 class="text_center"> 멘토링 요청 리스트 </h2>
 		<%@find_my_apply.each do |p|%>
-			<%if p.mentor_id==@user.id && p.complete==0 %>
+			<%if p.mentor_id == @mentor.id && p.complete== 0 %>
 			<!-- 접속 아이디가 멘토 아이디이고 해당 indexofapply의 complete==0인것	 -->
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<input type="hidden" value ="<%=p.user_id %>" name="mentee_id">
+						<!-- <input type="hidden" value ="<%=p.user_id %>" name="mentee_id"> -->
 							<%@all_user.each do |u|%>
 								<%if u.id==p.user_id%>
 									<li>
-										<a href="/mentor_viewdetail?list_id=<%=p.list_id%>">  
+										<a href="/mentor_viewdetail?list_id=<%=p.list_id%>&index_id=<%=p.id%>">  
 											<%=u.username%> 님의 멘토링 요청 확인하기 </a>
 									</li>
 								<%end%>
