--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,11 +52,9 @@
             </div>
             <div class="">
                 <div class="index_p">
-
                     <h1>행복하고 완벽한 여행을 위한 선택</h1>
-                    <h4>델포이 플래너를 이용해 계획을 세우고, 어려움을 겪는다면 멘토에게 도움을 받으세요.</h4>
+                    <h4>델포이의 멘토들과 함께 멋진 계획을 세우고, 최고의 여행을 즐기세요.</h4>
                     <div class="planner_button"><a href="/mentoring_apply" class="planner_a_button">멘토 상담 신청하기 </a></div>
-
                 </div>
             </div>  
         </div>
@@ -117,8 +115,6 @@
                                 <h4>체코의 숨겨진 동화같은 마을</h4>
                             </div>
                         </a>
-                           
-                        
                     </li>
                     <li class="trip2 item">
                         <a class="box">
