--- a/app/views/mentoring/mentoring_apply_form_2.erb
+++ b/app/views/mentoring/mentoring_apply_form_2.erb
@@ -25,6 +25,9 @@
 										<li class="my_page">
 											<a href="/mypage">마이페이지</a>
 										</li>
+                    <% if @user.grade == 2 %>
+                        <li class="mentoring_page"><a href="/mentor_view">멘토페이지</a></li>
+                    <% end %>
 										<li class="log_out">
 											<a href="/users/sign_out">로그아웃</a>
 										</li>
@@ -33,7 +36,7 @@
 							</div>
 							<% if @user.grade == 1 %>
 							<div class="li menu_admin">
-								<a href="/admin" class="li_a ">관리자 페이지</a>
+								<a href="/admin_all" class="li_a ">관리자 페이지</a>
 							</div>
 							<% end %>
 							<div class="li menu_enroll">
