--- a/app/views/home/apply_status.html.erb
+++ b/app/views/home/apply_status.html.erb
@@ -71,7 +71,7 @@
 											<%if u.id==m.user_id%>
 												<td><%=u.username%></td>
 												<%if i.complete==0%>
-													<td>미확</td>
+													<td>미확인</td>
 												<%elsif i.complete==1%>
 													<td>수락</td>
 												<%elsif i.complete==3%>
