--- a/app/views/home/apply_status.html.erb
+++ b/app/views/home/apply_status.html.erb
@@ -92,6 +92,7 @@
 							<%end%>
 						</tbody>
 					</table>
+            <a href="/remove_travel?list_id=<%= @list_id %>" class="btn btn-default remove_travel">취소</a>
 					<span style="float: right">
 						<button type="submit" class="btn btn-default">멘토 선택</button>
 					</span>
