--- a/app/views/home/mypage.html.erb
+++ b/app/views/home/mypage.html.erb
@@ -61,8 +61,8 @@
                 </div>
                 <!-- Nav tabs -->
                 <ul class="nav nav_edit nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#now" aria-controls="home" role="tab" data-toggle="tab">현재 진행중인 여행</a></li>
-                    <li role="presentation"><a href="#seminar" aria-controls="profile" role="tab" data-toggle="tab">등록된 여행</a></li>
+                    <li role="presentation" class="active"><a href="#now" aria-controls="home" role="tab" data-toggle="tab">진행 중인 여행</a></li>
+                    <li role="presentation"><a href="#seminar" aria-controls="profile" role="tab" data-toggle="tab">멘토링이 등록된 여행</a></li>
                     <li role="presentation"><a href="#enrollmentor" aria-controls="messages" role="tab" data-toggle="tab">멘토 등록</a></li>
                     <li role="presentation"><a href="#mentees" aria-controls="settings" role="tab" data-toggle="tab">내게 등록한 멘티</a></li>
                     <li role="presentation"><a href="#setting" aria-controls="settings" role="tab" data-toggle="tab">개인정보 수정</a></li>
@@ -83,15 +83,27 @@
                 <div role="tabpanel" class="tab-pane" id="seminar">
                 	<% @post.each do |p| %>
                 		<% if p.user_id == @user.id %>
-                			<!-- <div class="panel panel-default"> -->
-                				<div class="col-md-1"></div>
-                				<div class="form-group">
-                					<li>
-                						<a href="/mypage/checkout?list_id=<%=p.id%>"><%=p.mentor_area%> 여행 (<%=p.from%> ~ <%=p.to%>) 
-                							<br><div class="col-md-1"></div><h6><%=p.created_at%>에 저장됨</h6></a>
-                					</li>
-                				</div>
-            				<!-- </div> -->
+                          <% if p.complete == 3 %>
+                              <!--<a class = "travel_now_b" href="/mypage/checkout?list_id=<%=p.id%>">-->
+                                <div class="travel_now_cancel">
+                                  <div>
+                                    <h2>취소된 여행</h2>
+                                    <p>(<%= p.from %> ~ <%= p.to %>)</p>
+                                    <p><%= p.mentor_area %></p>
+                                  </div>
+                                </div>
+                              <!--</a>-->
+                          <% else %>
+                              <a class = "travel_now_a" href="/mypage/checkout?list_id=<%=p.id%>">
+                                <div class="travel_now">
+                                  <div>
+                                    <h2>여행 제목</h2>
+                                    <p>(<%= p.from %> ~ <%= p.to %>)</p>
+                                    <p><%= p.mentor_area %></p>
+                                  </div>
+                                </div>
+                              </a>
+                          <% end %>
                 		<% end %>
                 	<% end %>
                 </div>
