--- a/app/views/home/mentoring.html.erb
+++ b/app/views/home/mentoring.html.erb
@@ -60,7 +60,7 @@
         <!-- Nav tabs -->
         <div>
           <br>
-          <a class="btn btn-primary btn-lg btn-block" href="/mypage" role="button"> 멘토와 채팅하러 가기 </a>
+          <a class="btn btn-primary btn-lg btn-block" href="/mentoring_process?list_id=<%= @list_id %>" role="button"> 멘토와 채팅하러 가기 </a>
           <a href="/remove_travel?list_id=<%= @list_id %>" class="btn btn-default remove_travel">취소</a>
         </div>
       </div>
